# advent-of-code

./: .gitignore  Cargo.nix  Cargo.toml  README.adoc  flake.nix
.github/workflows/: cargo_clippy.yml  cargo_test.yml  nix_flake_check.yml  rust.yml  test.yml
docs/: contributing.adoc
