[package]
edition = "2021"
name = "advent_of_code"
version = "0.1.0"

[dependencies]
itertools = "0.12.0"
thiserror = "1.0"

[[bin]]
name = "2022_1_1"
path = "src/bin/2022/1/1/src/main.rs"

[[bin]]
name = "2022_1_2"
path = "src/bin/2022/1/2/src/main.rs"

[[bin]]
name = "2022_2_1"
path = "src/bin/2022/2/1/src/main.rs"

[[bin]]
name = "2022_2_2"
path = "src/bin/2022/2/2/src/main.rs"

[[bin]]
name = "2022_3_1"
path = "src/bin/2022/3/1/src/main.rs"

[[bin]]
name = "2022_3_2"
path = "src/bin/2022/3/2/src/main.rs"
